# val_description

./: .gitignore  CMakeLists.txt  README.md  README.md.orig  README.md~  package.xml  setup.py
common/xacro/api/: valkyrie_C_api.xacro  valkyrie_D_api.xacro  valkyrie_api.xacro
common/xacro/dev_ports/: valkyrie_A_ports.xacro  valkyrie_B_ports.xacro  valkyrie_C_ports.xacro  valkyrie_D_ports.xacro  valkyrie_gazebo_ports.xacro
common/xacro/nodes/: forearm_testbench_nodes.xacro  test_bench_nodes.xacro  valkyrie_nodes.xacro
common/xacro/serial_numbers/: forearm_left_testbench_serials.xacro  forearm_right_testbench_serials.xacro  forearm_testbench_serials.xacro  test_bench_serials.xacro  valkyrie_A_serials.xacro  valkyrie_B_serials.xacro  valkyrie_C_serials.xacro  valkyrie_D_serials.xacro
common_xacro/: mainpage.dox
common_xacro/xacro/: generic_models.xacro
instance/coefficients/: inc_idx_test.py
instance/coefficients/actuators/: test_v_a_001.xml  test_v_e_001.xml  test_v_e_002.xml  test_v_e_003.xml  test_v_e_004.xml  test_v_h_001_athena2.xml  v_a_001.xml  v_a_002.xml  v_a_003.xml  v_a_004.xml  v_a_005.xml  v_a_006.xml  v_a_007.xml  v_a_008.xml  v_a_009.xml  v_a_010.xml  v_a_011.xml  v_a_012.xml  v_a_013.xml  v_a_014.xml  v_a_015.xml  v_a_016.xml  v_a_017.xml  v_a_018.xml  v_a_019.xml  v_a_020.xml  v_b_001.xml  v_b_002.xml  v_b_003.xml  v_b_004.xml  v_b_005.xml  v_b_006.xml  (+115 more)
meshes/: aj4_Right.stl  aj5_Left.stl  head.stl  middlej2_Left.stl  multisense_hokuyo.stl  palm_Right.stl  pinkyj1_Right.stl  thumbj1_Right.stl  thumbj3_Left.stl
meshes/arms/: aj6_Left.stl
meshes/fingers/: indexj3_Left.stl  indexj3_Right.stl  pinkyj2_Left.stl  pinkyj2_Right.stl
meshes/head/: head_multisense_no_visor.stl
meshes_hd/arms/: aj4_Left.stl  aj5_Right.stl  palm_Left.stl
meshes_hd/fingers/: indexj1_Right.stl  middlej1_Right.stl  middlej3_Left.stl  pinkyj1_Left.stl  thumbj1_Left.stl
meshes_hd/torso/: torsopitch.stl
model/robots/: forearm.xacro  forearm_left.xacro  forearm_right.xacro  right_knee.xacro  right_leg.xacro  valkyrie_A_hw.xacro  valkyrie_A_no_hands_hw.xacro  valkyrie_A_sim.xacro  valkyrie_A_sim_pinned.xacro  valkyrie_B.xacro  valkyrie_B_hw.xacro  valkyrie_B_no_hands.xacro  valkyrie_B_sim.xacro  valkyrie_C_hw.xacro  valkyrie_C_no_hands_hw.xacro  valkyrie_D.xacro  valkyrie_D_no_hands.xacro  valkyrie_remote_sim.xacro  valkyrie_remote_sim_pinned.xacro  valkyrie_sim.xacro  valkyrie_sim_pinned.xacro
robots/: shared_memory_actuators.urdf  shared_memory_actuators.xacro  shared_memory_actuators.xml  valkyrie_A.xacro  valkyrie_A_hw.xacro  valkyrie_A_sim.xacro  valkyrie_B_sim.xacro
robots/common/: common_bodies.xacro  generic_models.xacro  valkyrie_base.xacro  valkyrie_base_hw.xacro  valkyrie_base_sim.xacro
scripts/: set_actuator_force_offsets
src/val_description/: InstanceFileHandler.py
test/: CoeffCollectionDefinitions.py  CoeffSchemaDefinitions.py  ValkyrieInEmptyWorld.launch  VisualizeFramesInRviz.launch  frames.gv  test_CoeffSchema.py  test_InstanceFileHandler.py
test/test_files/: ankle_instance.xml  sample_instance.xml  test_actuator_force_offsets.xml  test_instance.xml  valkyrie_A.xml
urdf/: multisense_sl.urdf
valkyrie_description/: CMakeLists.txt  README.md
valkyrie_description/common_xacro/: manifest.xml
valkyrie_description/meshes/: aj2_Left.stl  aj6_Right.stl  indexj1_Left.stl  indexj2_Left.stl  indexj2_Right.stl  lj5.stl  middlej1_Left.stl  middlej2_Right.stl  middlej3_Right.stl  pinkyj3_Left.stl  pinkyj3_Right.stl  thumbj2_Left.stl  thumbj2_Right.stl  thumbj3_Right.stl  thumbj4_Left.stl  thumbj4_Right.stl
valkyrie_description/test/: ValkyrieInEmptyWorld.launch  VisualizeFramesInRviz.launch
(+236 files in other folders)
